...
                                </connections>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AUTOBOTS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xOq-QJ-1Re">
                                <rect key="frame" x="10" y="118" width="90" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DECEPTICONS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6S-a8-ENz">
                                <rect key="frame" x="249" y="118" width="116" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start Battle to determine the Champion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRD-r0-oZk">
                                <rect key="frame" x="37.5" y="49" width="300" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Start Battle">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="aA3-uc-oei"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Battlefield" id="cZN-ld-YV6" userLabel="Battlefield"/>
                    <navigationItem key="navigationItem" id="liK-i8-c8a"/>
                    <connections>
...
                                        <rect key="frame" x="0.0" y="0.0" width="63" height="34"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Refresh">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        <rect key="frame" x="70" y="0.0" width="81" height="34"/>
                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Create New">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
        <scene sceneID="A5X-5d-3TJ">
            <objects>
                <viewController id="DDk-8A-UDg" userLabel="Create Transformer" customClass="CreateTransformerViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="r6A-Jh-K2o">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H39-CZ-gXv" userLabel="Name Label">
                                <rect key="frame" x="20" y="64" width="52.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TEAM:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="egh-je-N7m" userLabel="Team Label">
                                <rect key="frame" x="20" y="124.5" width="50.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="160" y="629" width="55" height="33"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <state key="normal" title="Create"/>
                                <connections>
                                    <action selector="createTransformer:" destination="DDk-8A-UDg" eventType="touchUpInside" id="xQU-AS-YPZ"/>
...
                                </constraints>
                                <segments>
                                    <segment title="Autobot"/>
                                    <segment title="Decepticon"/>
                                </segments>
                            </segmentedControl>
...
